@@ -1,13 +1,13 @@
 package me.stef.fullstack.service;
 
 import me.stef.fullstack.dao.UserRepository;
+import me.stef.fullstack.dto.RegisterUserDTO;
 import me.stef.fullstack.dto.UserDTO;
 import me.stef.fullstack.model.User;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class UserService {
@@ -19,10 +19,21 @@ public class UserService {
         return repository.findAll()
                 .stream()
                 .map(this::map)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public UserDTO saveUser(RegisterUserDTO request) {
+        User user = map(request);
+        repository.save(user);
+
+        return map(user);
     }
 
     private UserDTO map(User in) {
         return new UserDTO(in.getId(), in.getFirstName(), in.getLastName(), in.getEmail());
+    }
+
+    private User map(RegisterUserDTO in) {
+        return new User(in.getFirstName(), in.getLastName(), in.getEmail());
     }
 }
